--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 TOKEN='5439011304:AAGF_03sJSmc8GR7gkUhjG_3SEvadUPz3oI'
-EX_PATH_DRIVER='C:\Users\Алексей\PycharmProjects\dnevnik_bot_SPB\firefox\geckodriver.exe'
+EX_PATH_DRIVER='snap/bin/geckodriver'
