--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 TOKEN='5439011304:AAGF_03sJSmc8GR7gkUhjG_3SEvadUPz3oI'
-EX_PATH_DRIVER='snap/bin/geckodriver'
+EX_PATH_DRIVER='dnevnik_bot_SPB1/firefox/geckodriver-v0.31.0-linux64.tar/geckodriver-v0.31.0-linux64.tar'
