--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN='5824617627:AAHaZCgjnIFuQIWk8h49yyvlsnlI7K9Ia4g'
-EX_PATH_DRIVER='C:\Users\Алексей\PycharmProjects\dnevnik_bot_SPB\firefox\geckodriver.exe'
+TOKEN='5439011304:AAGF_03sJSmc8GR7gkUhjG_3SEvadUPz3oI'
+EX_PATH_DRIVER='snap/bin/geckodriver'
